--- a/spud/templates/spud/date_list.html
+++ b/spud/templates/spud/date_list.html
@@ -13,7 +13,7 @@
 <h1>Dates</h1>
 
 <h2>Search</h2>
-<form method="post">
+<form method="post">{% csrf_token %}
 <table>{{ form.as_table }}</table>
 <input type="submit" />
 </form>
