--- a/spud/templates/spud/object_confirm_delete.html
+++ b/spud/templates/spud/object_confirm_delete.html
@@ -18,7 +18,7 @@
 </ul>
 {% else %}
 <p>Are you sure you want to delete {{ object }}?</p>
-<form method="post">
+<form method="post">{% csrf_token %}
   <div>
     <input type="hidden" name="post" value="yes" />
     <input type="submit" value="{% trans "Yes, I'm sure" %}" />
