--- a/spud/templates/spud/person_list.html
+++ b/spud/templates/spud/person_list.html
@@ -25,7 +25,7 @@
 
 <h2>Search</h2>
 
-<form method="post">
+<form method="post">{% csrf_token %}
 <table>{{ form.as_table }}</table>
 <input type="submit" />
 </form>
