--- a/spud/templates/spud/place_detail.html
+++ b/spud/templates/spud/place_detail.html
@@ -86,7 +86,7 @@
 
 <h2>Search</h2>
 
-<form method="post">
+<form method="post">{% csrf_token %}
 <table>{{ form.as_table }}</table>
 <input type="submit" />
 </form>
