Don't CSRF protect POST requests that have no side effects.

--- a/spud/templates/spud/place_detail.html
+++ b/spud/templates/spud/place_detail.html
@@ -79,7 +79,7 @@
 
 <h2>Search</h2>
 
-<form method="post">{% csrf_token %}
+<form method="post">
 <table>{{ form.as_table }}</table>
 <input type="submit" />
 </form>
