--- a/spud/templates/spud/search_list.html
+++ b/spud/templates/spud/search_list.html
@@ -14,7 +14,7 @@
 
 <h1>Search</h1>
 
-<form method="post">{% csrf_token %}
+<form method="post">
 <table>{{ form.as_table }}</table>
 <input type="submit" />
 </form>
