--- a/spud/templates/spud/object_list.html
+++ b/spud/templates/spud/object_list.html
@@ -22,7 +22,7 @@
 
 {% if form %}
 <h2>Search</h2>
-<form method="post">{% csrf_token %}
+<form method="post">
 <table>{{ form.as_table }}</table>
 <input type="submit" />
 </form>
