--- a/spud/templates/html/static.html
+++ b/spud/templates/html/static.html
@@ -18,6 +18,7 @@
 <script type="text/javascript" src="{% static 'js/jquery.js' %}" />
 <script type="text/javascript" src="{% static 'js/jquery-ui.js' %}" />
 <script type="text/javascript" src="{% static 'js/jquery.blockUI.js' %}" />
+<script type="text/javascript" src="{% static 'js/jcookie.js' %}" />
 <script type="text/javascript" src="{% static 'js/ajax_select.js' %}" />
 <script type="text/javascript" src="{% static 'js/photos.js' %}" />
 {% endblock %}
